moved real footer from index to _Layout

--- a/MyYouthFutures/Views/Home/Index.cshtml
+++ b/MyYouthFutures/Views/Home/Index.cshtml
@@ -169,7 +169,7 @@
     </section>
 </article>
 
-<footer class="container-fluid">
+<!--<footer class="container-fluid">
     <div class="row clear">
         <section class="col-xs-6 col-sm-4 col-md-2 footer-section">
             <p class="quicksand-dark-18-white">Contact</p>
@@ -203,4 +203,4 @@
     <div class="copyright">
         <p class="mont-regular-dark-16-grey">© Youth Futures, Inc.</p>
     </div>
-</footer>
+</footer>-->
