--- a/MyYouthFutures/Views/Shared/_Layout.cshtml
+++ b/MyYouthFutures/Views/Shared/_Layout.cshtml
@@ -106,10 +106,45 @@
         
         @RenderBody()
         
-        <hr />
+        <footer class="container-fluid">
+            <div class="row clear">
+                <section class="col-xs-6 col-sm-4 col-md-2 footer-section">
+                    <p class="quicksand-dark-18-white">Contact</p>
+                    <p class="mont-light-dark-14-email">Email: info@yfut.org</p>
+                    <p class="mont-light-dark-14-email">
+                        Phone:
+                        <tel>801-528-1214</tel>
+                    </p>
+                </section>
+                <section class="col-xs-6 col-sm-4 col-md-2 footer-section">
+                    <p class="quicksand-dark-18-white">Mailing Address</p>
+                    <p class="mont-light-dark-14-email">Youth Futures<br /> POB 160301<br /> Clearfield, UT 84016</p>
+                </section>
+                <section class="col-xs-6 col-sm-4 col-md-2 footer-section">
+                    <p class="quicksand-dark-18-white">Shelter Address</p>
+                    <p class="mont-light-dark-14-email">Youth Futures<br /> 2760 S. Adams Ave<br /> Ogden, UT 84403</p>
+                </section>
+                <section class="col-xs-6 col-sm-4 col-md-2 footer-section">
+                    <img src="./resources/page_1.png" alt="Home Image" class="footer-home" />
+                </section>
+                <section class="col-xs-10 col-xs-offset-1
+                            col-sm-6 col-md-4 col-sm-offset-0 footer-section">
+                    <div class="social-media">
+                        <a href="#"><img src="~/images/social_instagram.png" alt="Instagram" /></a>
+                        <a href="#"><img src="~/images/social_twitter.png" alt="Twitter" /></a>
+                        <a href="#"><img src="~/images/social_tumblr.png" alt="Tumbler" /></a>
+                        <a href="#"><img src="~/images/social_fb.png" alt="Facebook" /></a>
+                    </div>
+                </section>
+            </div>
+            <div class="copyright">
+                <p class="mont-regular-dark-16-grey">© Youth Futures, Inc.</p>
+            </div>
+        </footer>
+        <!--<hr />
         <footer>
             <p>&copy; 2017 - Youth_Futures_Shelter_Home</p>
-        </footer>
+        </footer>-->
     </div>
 
     <environment names="Development">
