--- a/MyYouthFutures/Views/Shared/_Layout.cshtml
+++ b/MyYouthFutures/Views/Shared/_Layout.cshtml
@@ -55,12 +55,13 @@
                 <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                     <ul class="nav navbar-nav navbar-right">
                         <li><a asp-area="" asp-controller="Home" asp-action="Index" class="current">Home</a></li>
-                        <li class="dropdown">
+                        <li><a asp-area="" asp-controller="Home" asp-action="ComingSoon">Programs</a></li><!--Will have to be a redirect, instead of a locked-in link-->
+                        <!--<li class="dropdown">
                             <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Programs</a>
-                            <ul class="dropdown-menu">
-                                <li><a asp-area="" asp-controller="Home" asp-action="About">Street Outreach</a></li> @*TODO: This needs linked to the - Outreach Page*@ <!--asp-route-anchor="#street_outreach" ??-->
+                            ><ul class="dropdown-menu">
+                                <li><a asp-area="" asp-controller="Home" asp-action="About">Street Outreach</a></li> @*TODO: This needs linked to the - Outreach Page*@ <!--asp-route-anchor="#street_outreach" ??- ->
                             </ul>
-                        </li>
+                        </li>-->
                         <li class="dropdown">
                             <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Get Involved</a>
                             <ul class="dropdown-menu">
