--- a/MyYouthFutures/Views/Home/Index.cshtml
+++ b/MyYouthFutures/Views/Home/Index.cshtml
@@ -1,10 +1,9 @@
-﻿@Model ItemViewModel
+﻿@using MyYouthFutures.Controllers
+@Model ItemViewModel
 @{
     ViewData["Title"] = "Home Page Demo";
 }
-
-
-
+@* HOME TITLE MAIN*@
 <section class="container-fluid main-header">
     <div class="row">
         <div class="col-xs-12 header-box">
@@ -14,7 +13,7 @@
                     <p class="header-text-greeting col-xs-12">@HT.Title</p>
                     <a asp-controller="HomeTitles" asp-action="Edit" asp-route-id="@HT.ID">Edit</a>
                 }
-                
+
             </div>
             <div class="sub-text-box row">
                 @foreach (HomeTitle HT in Model.HomeTitle)
@@ -22,11 +21,13 @@
                     <p class="sub-text col-xs-12">@HT.Subtitle</p>
                     <a asp-controller="HomeTitles" asp-action="Edit" asp-route-id="@HT.ID">Edit</a>
                 }
-                
+
             </div>
         </div>
     </div>
 </section>
+@* END HOME TITLE MAIN*@
+@* HOME TITLE MESSAGE *@
 <section id="header" class="container-fluid">
     <div class="row">
         <div class="col-xs-offset-1 col-xs-11">
@@ -36,11 +37,13 @@
                     <span class="mont-semibold-dark-36 have-questions-heading">@HT.SubheaderContent</span>
                     <a asp-controller="HomeTitles" asp-action="Edit" asp-route-id="@HT.ID">Edit</a>
                 }
-                
+
             </p>
         </div>
     </div>
 </section>
+@* END HOME TITLE MESSAGE *@
+@* SERVICES TITLE *@
 <section class="container-fluid services">
     <div class="row">
         <div class="col-xs-12">
@@ -58,11 +61,12 @@
         </div>
     </div>
 </section>
+@* END SERVICES TITLE *@
 @* Panels for Services Offered *@
 
 <section>
     <div class="container text-center row">
-            <a class="editText" asp-controller="Services_Message" asp-action="Create">Add New Service</a>
+        <a class="editText" asp-controller="Services_Message" asp-action="Create">Add New Service</a>
     </div>
     <div class="row">
         <div class="boxes">
@@ -70,9 +74,9 @@
             {
                 <div class="col-xs-3 panel ">
                     <edit-container>
-                        <article class ="editArea">
+                        <article class="editArea">
                             <section class="panel-img-container">
-                                <img src="@SM.MessageImage" alt="House" class="panel-img"/>
+                                <img src="@SM.MessageImage" alt="House" class="panel-img" />
                             </section>
                             <section ng-model="ServicesHeader[@SM.ID]">
                                 <p class="quicksand-light-32 panel-heading">@SM.MessageHeader</p>
@@ -81,11 +85,12 @@
                                 <p class="mont-light-light-18 panel-summary">@SM.Message</p>
                             </section>
                             <section class="panel-footer">
-                                <p class="quicksand-light-24-green"><a href="#">Learn more ></a>
+                                <p class="quicksand-light-24-green">
+                                    <a href="#">Learn more ></a>
                                 </p>
                             </section>
                         </article>
-                        <edit-link >
+                        <edit-link>
                             <edit-a controller="Services_Message" route-id="@SM.ID" class="editText"></edit-a>
                         </edit-link>
                     </edit-container>
@@ -96,37 +101,49 @@
 
     </div>
 </section>
+@* END Panels for Services Offered *@
 
 <article class="container-fluid purpose-box">
     <section class="row purpose col-xs-12">
-        <div class="row purpose-title">
-            @foreach (Purpose PS in Model.Purpose)
-            {
-                <h2 class="h2-white">@PS.Title</h2>
-                <a asp-controller="Purposes" asp-action="Edit" asp-route-id="@PS.PurposeID">Edit</a>
-            }
+        <edit-container>
+            <div class="row purpose-title">
 
-        </div>
-        <div class="row purpose-detail">
-            <div class="col-xs-12 no-padding">
-                @foreach (Purpose PS in Model.Purpose)
-            {
-                <p class="montlight-dark-32">@PS.Message</p>
-                <a asp-controller="Purposes" asp-action="Edit" asp-route-id="@PS.PurposeID">Edit</a>
-                }
-                
-            </div>
-        </div>
-        <div class="row purpose-stats">
-            <div class="col-xs-12">
                 @foreach (Purpose PS in Model.Purpose)
                 {
-                    <p>@PS.Content</p>
-                    <a asp-controller="Purposes" asp-action="Edit" asp-route-id="@PS.PurposeID">Edit</a>
+                    <h2 class="h2-white  editArea">@PS.Title</h2>
+                    <edit-link>
+                        <edit-a controller="Purposes" route-id="@PS.PurposeID"></edit-a>
+                    </edit-link>
                 }
-
             </div>
-        </div>
+        </edit-container>
+        <edit-container>
+            <div class="row purpose-detail">
+                <div class="col-xs-12 no-padding">
+                    @foreach (Purpose PS in Model.Purpose)
+                    {
+                        <p class="montlight-dark-32 editArea">@PS.Message</p>
+                        <edit-link>
+                            <edit-a controller="Purposes" route-id="@PS.PurposeID"></edit-a>
+                        </edit-link>
+                    }
+                </div>
+            </div>
+        </edit-container>
+        <edit-container>
+            <div class="row purpose-stats">
+                <div class="col-xs-12">
+                    @foreach (Purpose PS in Model.Purpose)
+                    {
+                        <p class="editArea">@PS.Content</p>
+                        <edit-link>
+                            <edit-a controller="Purposes" route-id="@PS.PurposeID"></edit-a>
+                        </edit-link>
+                    }
+
+                </div>
+            </div>
+        </edit-container>
     </section>
     <div class="clear"></div>
     <section class="row sponsor-bar">
@@ -150,25 +167,34 @@
         </div>
     </section>
     <section class="row purpose-user">
-        <!--<div class="purpose-boxes">-->
+        <div class="container text-center row">
+            <a class="editText" asp-controller="Links" asp-action="Create">Add New Link</a>
+        </div>
         <div class="boxes">
             @foreach (Link Lk in Model.Link)
             {
-            <article class="col-xs-3 panel">
-                <section class="panel-img-container">
-                    <img src="@Lk.Image" alt="Volunteer" class="panel-img" />
-                </section>
-                <section>
-                    <p class="panel-heading">@Lk.Title</p>
-                </section>
-                <section>
-                    <p class="mont-light-light-22 panel-summary">@Lk.Message</p>
-                </section>
-                <section class="panel-footer">
-                    <p class="quicksand-light-24-green"><a href="#">@Lk.Hyperlink ></a></p>
-                </section>
-                <a asp-controller="Links" asp-action="Edit" asp-route-id="@Lk.LinkID">Edit</a>
-            </article>
+                <div class="col-xs-3 panel ">
+                    <edit-container>
+                        <article class="editArea">
+                            <section class="panel-img-container">
+                                <img src="@Lk.Image" alt="Volunteer" class="panel-img"/>
+                            </section>
+                            <section>
+                                <p class="panel-heading">@Lk.Title</p>
+                            </section>
+                            <section>
+                                <p class="mont-light-light-22 panel-summary">@Lk.Message</p>
+                            </section>
+                            <section class="panel-footer">
+                                <p class="quicksand-light-24-green"><a href="#">@Lk.Hyperlink ></a>
+                                </p>
+                            </section>
+                        </article>
+                        <edit-link>
+                            <edit-a controller="Links" route-id="@Lk.LinkID"></edit-a>
+                        </edit-link>
+                    </edit-container>
+                </div>
             }
         </div>
     </section>
