--- a/MyYouthFutures/Views/Home/Index.cshtml
+++ b/MyYouthFutures/Views/Home/Index.cshtml
@@ -4,44 +4,50 @@
     ViewData["Title"] = "Home Page Demo";
 }
 @* HOME TITLE MAIN*@
-<section class="container-fluid main-header">
-    <div class="row">
-        <div class="col-xs-12 header-box">
-            <div class="row">
-                @foreach (HomeTitle HT in Model.HomeTitle)
-                {
-                    <p class="header-text-greeting col-xs-12">@HT.Title</p>
-                    <a asp-controller="HomeTitles" asp-action="Edit" asp-route-id="@HT.ID">Edit</a>
-                }
+<edit-container>
+    <section class="container-fluid main-header">
+        <div class="row">
+            <div class="col-xs-6 header-box">
+                <div class="row">
 
-            </div>
-            <div class="sub-text-box row">
-                @foreach (HomeTitle HT in Model.HomeTitle)
-                {
-                    <p class="sub-text col-xs-12">@HT.Subtitle</p>
-                    <a asp-controller="HomeTitles" asp-action="Edit" asp-route-id="@HT.ID">Edit</a>
-                }
+                    @foreach (HomeTitle HT in Model.HomeTitle)
+                    {
+                        <p class="header-text-greeting editArea">@HT.Title</p>
+                        <edit-link>
+                            <edit-a controller="HomeTitles" route-id="@HT.ID"></edit-a>
+                        </edit-link>
+                    }
+                </div>
+                <div class="sub-text-box row editArea">
+                    @foreach (HomeTitle HT in Model.HomeTitle)
+                    {
+                        <p class="sub-text col-xs-12">@HT.Subtitle</p>
 
+                    }
+                </div>
             </div>
         </div>
-    </div>
-</section>
-@* END HOME TITLE MAIN*@
-@* HOME TITLE MESSAGE *@
-<section id="header" class="container-fluid">
-    <div class="row">
-        <div class="col-xs-offset-1 col-xs-11">
-            <p class="green-header">
-                @foreach (HomeTitle HT in Model.HomeTitle)
-                {
-                    <span class="mont-semibold-dark-36 have-questions-heading">@HT.SubheaderContent</span>
-                    <a asp-controller="HomeTitles" asp-action="Edit" asp-route-id="@HT.ID">Edit</a>
-                }
-
-            </p>
+    </section>
+    @* END HOME TITLE MAIN*@
+    @* HOME TITLE MESSAGE *@
+    <section id="header" class="container-fluid">
+        <div class="row">
+            <div class="col-xs-offset-1 col-xs-11">
+                <p class="green-header">
+                    @foreach (HomeTitle HT in Model.HomeTitle)
+                    {
+                        <span class="mont-semibold-dark-36 have-questions-heading editArea">@HT.SubheaderContent</span>
+                    }
+                </p>
+            </div>
         </div>
-    </div>
-</section>
+    </section>
+</edit-container>
+
+
+
+
+
 @* END HOME TITLE MESSAGE *@
 @* SERVICES TITLE *@
 <section class="container-fluid services">
@@ -177,7 +183,7 @@
                     <edit-container>
                         <article class="editArea">
                             <section class="panel-img-container">
-                                <img src="@Lk.Image" alt="Volunteer" class="panel-img"/>
+                                <img src="@Lk.Image" alt="Volunteer" class="panel-img" />
                             </section>
                             <section>
                                 <p class="panel-heading">@Lk.Title</p>
@@ -186,7 +192,8 @@
                                 <p class="mont-light-light-22 panel-summary">@Lk.Message</p>
                             </section>
                             <section class="panel-footer">
-                                <p class="quicksand-light-24-green"><a href="#">@Lk.Hyperlink ></a>
+                                <p class="quicksand-light-24-green">
+                                    <a href="#">@Lk.Hyperlink ></a>
                                 </p>
                             </section>
                         </article>
