Cleaned up index

--- a/MyYouthFutures/Views/Home/Index.cshtml
+++ b/MyYouthFutures/Views/Home/Index.cshtml
@@ -13,6 +13,8 @@
     <section class="row purpose col-xs-12">
         <edit-container>
             <div class="row purpose-title">
+                
+                @Html.DisplayFor(Model.Purpose)
 
                 @foreach (Purpose PS in Model.Purpose)
                 {
