modified the 'Coming Soon' page to look better

--- a/MyYouthFutures/Views/Home/ComingSoon.cshtml
+++ b/MyYouthFutures/Views/Home/ComingSoon.cshtml
@@ -4,6 +4,16 @@
     Layout = "../Shared/_Layout.cshtml";
 }
 
-<section id="comingSoon">
-    <h2>ComingSoon</h2>
-</section>
+<article id="comingSoon">
+    
+    <div class="container-fluid">
+        <div class="questions">
+        </div>
+    </div>
+
+    <h2 class="row">
+        <span class="col-xs-12">Page</span>
+        <span class="col-xs-12 h2style1">Coming Soon</span>
+    </h2>
+    
+</article>
