--- a/MyYouthFutures/wwwroot/css/secondaryStyles.css
+++ b/MyYouthFutures/wwwroot/css/secondaryStyles.css
@@ -489,33 +489,6 @@
         margin-bottom: 5%;
     }
 
-/********************************
-    Buttons
-*********************************/
-.submit_button {
-    background-color: #9ec54d;
-    font-family: "montserrat-semibold";
-    font-size: 14px;
-    line-height: 29px;
-    color: #ffffff;
-    width: 145px !important;
-    height: 36px !important;
-    border: 0;
-}
-
-.cancel {
-    background-color: white;
-    font-family: "montserrat-semibold";
-    font-size: 14px;
-    line-height: 29px;
-    color: #9ec54d;
-    width: 145px !important;
-    height: 36px !important;
-    border-style: solid;
-    border-width: 1px;
-    border-color: #9ec54d;
-}
-
 /*
     Contact Cont.
 */
@@ -566,260 +539,26 @@
     padding-bottom: 10%;
 }
 
-/***************************
-    General Modal look
-****************************/
-.modal {
-    font-family: "montserrat-regular";
-    padding-top: 100px;
-}
 
-    .modal h1, .modal h2, .modal h3, .modal h4, .modal h5, .modal h6 {
-        font-family: "montserrat-regular";
-        font-weight: bold;
-    }
+ /*********************
+     Coming Soon
+ **********************/
 
-.centered, #loginCase{
-    float: none;
-    margin: 0 auto;
-}
-
-.container_modal1 {
-    padding: 2px;
-    background-color: white;
-    -moz-border-radius: 10px;
-    -webkit-border-radius: 10px;
-    border-radius: 10px;
-    border-style: solid;
-    border-color: #583b13; /*brown*/
-    font-weight: bold;
-    color: #583b13;
-}
-
-.container_modal2 {
-    padding: 5px;
-    background-color: white;
-    -moz-border-radius: 7px;
-    -webkit-border-radius: 7px;
-    border-radius: 7px;
-    border-style: solid;
-    border-color: #86ad38; /*green*/
-}
-
-.btn-success {
-    color: white;
-    background-color: #9ec54d;
-    border-color: #5a7425;
-}
-
-    .btn-success:focus,
-    .btn-success.focus {
-        color: white;
-        background-color: #779a32;
-        border-color: #5a7425;
-    }
-
-    .btn-success:hover {
-        color: white;
-        background-color: #779a32;
-        border-color: #5a7425;
-    }
-
-.btn-default {
-    color: #404040;
-    background-color: #cccccc;
-    border-color: #595959;
-}
-
-    .btn-default:focus,
-    .btn-default.focus {
-        color: #333333;
-        background-color: #999999;
-        border-color: #666666;
-    }
-
-    .btn-default:hover {
-        color: #333333; 
-        background-color: #999999;
-        border-color: #666666;
-    }
-
-.row{
-    margin: 5px 0px 5px 0px;
-}
-
-.modal input[type=text], .modal input[type=password], .modal select {
-    height: 35px;
-    margin: 2px 2px 15px 2px;
-    padding: 2px;
-    font-size: medium;
-}
-
-.modal label {
-    font-size: large;
-    vertical-align: text-bottom;
-    margin: 5px 0 0 0;
-    padding: 0;
-}
-
-.modal .title {
-    color: #583b13;
-    text-align: center;
-}
-
-.modal .titleBox{
-    border-bottom: 5px double #86ad38;
-    margin-bottom: 10px;
-}
-
-.modal .header_img {
-    width: 130px;
-    padding: 0px;
-    margin: 0px;
-}
-
-/***********************
-    Login
-************************/
-#loginCase{
-    width: 380px;
-}
-
-#loginModal{
-    margin: 10px;
-}
-
-#loginModal p a{
-    font-size: small;
-    text-align: center;
-    margin: 1px;
-    padding: 0;
-}
-
-#loginModal img {
-    margin: 20px 0px 20px 0px;
-}
-
-#cncl {
-    background: rgba(204, 204, 204, 0.0);
-    -moz-border-radius: 7px;
-    -webkit-border-radius: 7px;
-    border-radius: 7px;
-    height: 30px;
-    width: 30px;
-    margin: 0px 0px 0px 32px;
-    padding: 0px 0px 0px 0px;
-}
-
-    #cncl:hover {
-        background: rgba(179,179,179,0.6);
-    }
-
-    #cncl span.glyphicon {
-        font-size: x-large;
-        margin: 3px 0px 0px 3px;
-    }
-
-/*************************
-    Sidebar
-**************************/
-#sidebar {
-    background-color: #1100FF;
-    float: left;
-    z-index: 100;
-    position: absolute;
-}
-
-#textarea {
-    height: 300px;
-    width: 100px;
-    max-height: 350px;
-    max-width: 150px;
-}
-/******************************
-    AddStaff Modal
-*******************************/
-#staff {
-    width: 600px;
-}
-
-#staff input{
-    margin: 2px;
-}
-
-#staff button {
-    margin: 5px 0px 5px 0px;
-}
-
-#staff #add_img .staff_pic{
-    border: double;
-    padding: 0px;
-    margin: 1px;
-}
-
-#staff #add_img, #staff #add_img div{
-    align-content:center;
-}
-
-#staff_info div{
-    margin: 15px 0px 15px 0px;
-    justify-content: center;
-    font-size: large;
-}
-
-#staff_info .fixed_width label{
-    width: 50px;
-}
-
-#staff .col-xs-6{
-    margin: 5px 0px 5px 0px;
-}
-
-#staff header {
-    text-align: left;
-    padding: 0px;
-    margin: 0px;
-}
-
-#staff div {
-    padding: 0px;
-}
-
-/*****************************
-    Donor Modal
-******************************/
-#donor{
-    width: 475px;
-}
-
-#donor_info label{
-    text-align: right;
-}
-
- #donor .fixed_width label{
-    width: 130px;
-}
-
- #donor select, #donor input[type=text], #donor input[type=password]{
-    width: 250px;
- }
-
- #donor .radLbl {
-    margin-left: 10px;
- }
-
- #donor .rad {
-     margin-right: 10px;
- }
-
-#donor img {
-    width: 130px;
-    padding: 0px;
-    margin: 0px;
-}
-
- #donor header{
-     text-align: left;
-     padding: 0px;
+ #comingSoon{
+     background-color: white;
      margin: 0px;
+     padding-bottom: 10px;
+     //height: 400px;
  }
+
+    #comingSoon h2 {
+        text-align: center;
+        padding: 100px 0px 100px 0px;
+        color: #ababab;
+        background: white;
+        text-transform: uppercase;
+    }
+
+    #comingSoon .h2style1 {
+        color: #8ebc3d;
+    }
