Removed unnecessary comments

--- a/MyYouthFutures/Views/Shared/_Layout.cshtml
+++ b/MyYouthFutures/Views/Shared/_Layout.cshtml
@@ -15,8 +15,9 @@
         <link rel="stylesheet" href="~/css/site.css" />
         <link rel="stylesheet" href="~/css/secondaryStyles.css" />
         <link rel="stylesheet" href="~/css/fonts.css" />
+        <link rel="stylesheet" href="~/css/modals.css" />
         <link rel="stylesheet" href="~/css/main.css" />
-        <link href="~/css/edit.css" rel="stylesheet" />
+        <link rel="stylesheet" href="~/css/edit.css"  />
 
     </environment>
     <environment names="Staging,Production">
@@ -142,10 +143,6 @@
                 <p class="mont-regular-dark-16-grey">© Youth Futures, Inc.</p>
             </div>
         </footer>
-        <!--<hr />
-        <footer>
-            <p>&copy; 2017 - Youth_Futures_Shelter_Home</p>
-        </footer>-->
     </div>
 
     <environment names="Development">
