--- a/MyYouthFutures/Views/Home/ComingSoon.cshtml
+++ b/MyYouthFutures/Views/Home/ComingSoon.cshtml
@@ -4,16 +4,17 @@
     Layout = "../Shared/_Layout.cshtml";
 }
 
-<article id="comingSoon">
+<article id="comingSoon" class="redirect">
     
-    <div class="container-fluid">
+    <!--<div class="container-fluid">
         <div class="questions">
         </div>
+    </div>-->
+    <div class="text">
+        <h2 class="row">
+            <span class="col-xs-12">Page</span>
+            <span class="col-xs-12 h2style1">Coming Soon</span>
+        </h2>
     </div>
-
-    <h2 class="row">
-        <span class="col-xs-12">Page</span>
-        <span class="col-xs-12 h2style1">Coming Soon</span>
-    </h2>
     
 </article>
