Attempted to add Youth_Stories section, didn't work, commented out parts that made it break

--- a/MyYouthFutures/Views/Home/About.cshtml
+++ b/MyYouthFutures/Views/Home/About.cshtml
@@ -304,6 +304,26 @@
             </section>
         </div>
     </div>
+
+    <!--Youth Stories-->
+    <!--<div class="container-fluid">
+        <div class="row youthStories_text">
+            <section class="col-xs-12">
+                @*@foreach (Youth_Story ys in Model.YouthStories)
+                {
+                    <h4>@ys.title</h4>
+                    <p>@ys.date</p>
+                    <div>
+                        <img src=@ys.image />
+                        <p>@ys.imageBlurb</p>
+                    </div>
+                    <p class="mont_regular_22_darkgray">@ys.articleText</p>
+                }*@
+            </section>
+        </div>
+    </div>-->
+
+    <!--Donors-->
     <div class="container-fluid" id="donorsMain">
         <div class="row donor_header">
             <div class="col-xs-6 text">
