--- a/MyYouthFutures/Views/Shared/_Layout.cshtml
+++ b/MyYouthFutures/Views/Shared/_Layout.cshtml
@@ -78,6 +78,7 @@
                                 <li><a asp-area="" asp-controller="Home" asp-action="About">Staff</a></li>@*TODO: This needs linked to the Staff Section of the About Page*@
                                 <li><a asp-area="" asp-controller="Home" asp-action="About">Board</a></li>@*TODO: This needs linked to the Board Section of the About Page*@
                                 <li><a asp-area="" asp-controller="Home" asp-action="About">Media</a></li>@*TODO: This needs linked to the Media Section of the About Page*@
+                                <li><a asp-area="" asp-controller="Home" asp-action="About">Youth Stories</a></li>@*TODO: This needs linked to the Youth Stories Section of the About Page*@
                             </ul>
                         </li>
                         <li class="dropdown">
