--- a/MyYouthFutures/Views/Youth_Stories/Index.cshtml
+++ b/MyYouthFutures/Views/Youth_Stories/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<MyYouthFutures.Models.Youth_Stories>
+﻿@model IEnumerable<MyYouthFutures.Models.Youth_Story>
 
 @{
     ViewData["Title"] = "Index";
