--- a/MyYouthFutures/Views/Home/Index.cshtml
+++ b/MyYouthFutures/Views/Home/Index.cshtml
@@ -8,139 +8,6 @@
 
 @Html.Partial("PartialViews/_Services")
 
+@Html.Partial("PartialViews/_Purposes")
 
-<article class="container-fluid purpose-box">
-    <section class="row purpose col-xs-12">
-        <edit-container>
-            <div class="row purpose-title">
-                
-                @Html.DisplayFor(Model.Purpose)
-
-                @foreach (Purpose PS in Model.Purpose)
-                {
-                    <h2 class="h2-white editArea">@PS.Title</h2>
-                    <edit-link>
-                        <edit-a controller="Purposes" route-id="@PS.PurposeID"></edit-a>
-                    </edit-link>
-                }
-            </div>
-        </edit-container>
-        <edit-container>
-            <div class="row purpose-detail">
-                <div class="col-xs-12 no-padding">
-                    @foreach (Purpose PS in Model.Purpose)
-                    {
-                        <p class="montlight-dark-32 editArea">@PS.Message</p>
-                        <edit-link>
-                            <edit-a controller="Purposes" route-id="@PS.PurposeID"></edit-a>
-                        </edit-link>
-                    }
-                </div>
-            </div>
-        </edit-container>
-        <edit-container>
-            <div class="row purpose-stats">
-                <div class="col-xs-12">
-                    @foreach (Purpose PS in Model.Purpose)
-                    {
-                        <p class="editArea">@PS.Content</p>
-                        <edit-link>
-                            <edit-a controller="Purposes" route-id="@PS.PurposeID"></edit-a>
-                        </edit-link>
-                    }
-                </div>
-            </div>
-        </edit-container>
-    </section>
-    <div class="clear"></div>
-    <section class="row sponsor-bar">
-        <div class="col-xs-12 col-lg-3">
-            <p class="partner-text">Our Partners</p>
-        </div>
-        <div class="col-xs-12 col-lg-3 ">
-            <div class="partner-logo">
-                <img src="~/images/mckaydee_hospital.png" alt="McKay Dee Hospital" class="mckay" />
-            </div>
-        </div>
-        <div class="col-xs-12 col-lg-3">
-            <div class="partner-logo">
-                <img src="~/images/the_group_logo.png" alt="The Group Real Estate" class="thegroup" />
-            </div>
-        </div>
-        <div class="col-xs-12 col-lg-3">
-            <div class="partner-logo">
-                <img src="~/images/giv_development.png" alt="GIV Development" class="giv" />
-            </div>
-        </div>
-    </section>
-    <section class="row purpose-user">
-        <div class="container text-center row">
-            <a class="editText" asp-controller="Links" asp-action="Create">Add New Link</a>
-        </div>
-        <div class="boxes">
-            @foreach (Link Lk in Model.Link)
-            {
-                <div class="col-xs-3 panel ">
-                    <edit-container>
-                        <article class="editArea">
-                            <section class="panel-img-container">
-                                <img src="@Lk.Image" alt="Volunteer" class="panel-img" />
-                            </section>
-                            <section>
-                                <p class="panel-heading">@Lk.Title</p>
-                            </section>
-                            <section>
-                                <p class="mont-light-light-22 panel-summary">@Lk.Message</p>
-                            </section>
-                            <section class="panel-footer">
-                                <p class="quicksand-light-24-green">
-                                    <a href="#">@Lk.Hyperlink ></a>
-                                </p>
-                            </section>
-                        </article>
-                        <edit-link>
-                            <edit-a controller="Links" route-id="@Lk.LinkID"></edit-a>
-                        </edit-link>
-                    </edit-container>
-                </div>
-            }
-        </div>
-    </section>
-</article>
-
-<footer class="container-fluid">
-    <div class="row clear">
-        <section class="col-xs-6 col-sm-4 col-md-2 footer-section">
-            <p class="quicksand-dark-18-white">Contact</p>
-            <p class="mont-light-dark-14-email">Email: info@yfut.org</p>
-            <p class="mont-light-dark-14-email">
-                Phone:
-                <tel>801-528-1214</tel>
-            </p>
-        </section>
-        <section class="col-xs-6 col-sm-4 col-md-2 footer-section">
-            <p class="quicksand-dark-18-white">Mailing Address</p>
-            <p class="mont-light-dark-14-email">Youth Futures<br /> POB 160301<br /> Clearfield, UT 84016</p>
-        </section>
-        <section class="col-xs-6 col-sm-4 col-md-2 footer-section">
-            <p class="quicksand-dark-18-white">Shelter Address</p>
-            <p class="mont-light-dark-14-email">Youth Futures<br /> 2760 S. Adams Ave<br /> Ogden, UT 84403</p>
-        </section>
-        <section class="col-xs-6 col-sm-4 col-md-2 footer-section">
-            <img src="./resources/page_1.png" alt="Home Image" class="footer-home" />
-        </section>
-        <section class="col-xs-10 col-xs-offset-1
-                            col-sm-6 col-md-4 col-sm-offset-0 footer-section">
-            <div class="social-media">
-                <a href="#"><img src="~/images/social_instagram.png" alt="Instagram" /></a>
-                <a href="#"><img src="~/images/social_twitter.png" alt="Twitter" /></a>
-                <a href="#"><img src="~/images/social_tumblr.png" alt="Tumbler" /></a>
-                <a href="#"><img src="~/images/social_fb.png" alt="Facebook" /></a>
-            </div>
-        </section>
-    </div>
-    <div class="copyright">
-        <p class="mont-regular-dark-16-grey">© Youth Futures, Inc.</p>
-    </div>
-</footer>
 
