Added edit to board of directors

--- a/MyYouthFutures/Views/Shared/PartialViews/_Staff.cshtml
+++ b/MyYouthFutures/Views/Shared/PartialViews/_Staff.cshtml
@@ -1,4 +1,12 @@
 ﻿
+<div class="container-fluid" id="staffMain">
+    <div class="row board_header">
+        <div class="col-xs-6 text" id="Staff">
+            <h2>Our</h2>
+            <h2 class="h2style1">Staff</h2>
+        </div>
+    </div>
+</div>
 <!--Staff-->
 @*<button type="button" data-toggle="modal" data-target="#staffPopup">Add Staff</button>*@
 <a asp-controller="Staff_Panel" asp-action="Create" >Add Staff</a>
