--- a/MyYouthFutures/Views/Home/About.cshtml
+++ b/MyYouthFutures/Views/Home/About.cshtml
@@ -13,11 +13,14 @@
 </div>*@
 
 @Html.Partial("PartialViews/_TextQuestions")
-@Html.Partial("PartialViews/_IntroductionArticle")
-@Html.Partial("PartialViews/_FoundersMessage")
+
+<edit-container>@Html.Partial("PartialViews/_IntroductionArticle")</edit-container>
+<edit-container>@Html.Partial("PartialViews/_FoundersMessage")</edit-container>
 @Html.Partial("PartialViews/_History")
-@Html.Partial("PartialViews/_FirstYearService")
+<edit-container>@Html.Partial("PartialViews/_FirstYearService")</edit-container>
+
 @Html.Partial("PartialViews/_StreetOutreach")
+
 @Html.Partial("PartialViews/_BoardOfDirectors")
 @Html.Partial("PartialViews/_Staff")
 @Html.Partial("PartialViews/_Media")
