--- a/MyYouthFutures/Views/Shared/PartialViews/_FirstYearService.cshtml
+++ b/MyYouthFutures/Views/Shared/PartialViews/_FirstYearService.cshtml
@@ -8,15 +8,17 @@
 </div>
 
 @* ------ First Year of Service ------ *@
-<div class="container">
+<div class="container editArea">
     <section class="row more">
         @foreach (FirstYear_Service_Messages fsm in Model.FirstYear_Service_Messages)
         {
             <div class="col-xs-12 col-md-4 more_volunteer">
                 <img src="@fsm.firstYearImage" title="Meal" alt="Meal">
                 <p class="vol_p mont_light_18_darkgray">@fsm.firstYearText</p>
-                <a asp-controller="FirstYear_Service_Messages" asp-action="Edit" asp-route-id="@fsm.ID">Edit</a>
-            </div>
+                <edit-link>
+                <edit-a controller="FirstYear_Service_Messages" route-id="@fsm.ID"></edit-a>
+                </edit-link>
+                    </div>
 
         }
     </section>
