--- a/MyYouthFutures/Views/Shared/PartialViews/_History.cshtml
+++ b/MyYouthFutures/Views/Shared/PartialViews/_History.cshtml
@@ -1,19 +1,22 @@
 ﻿@* ------ YF HISTORY ------ *@
-<div class="container-fluid">
-    <div class="row history_text">
-        <section class="col-xs-12">
-            @foreach (introArticle ia in Model.introArticles)
+<edit-container>
+    <div class="container-fluid">
+        <div class="row history_text">
+            <section class="col-xs-12">
+                @foreach (introArticle ia in Model.introArticles)
             {
                 if (ia.ID == 2)
                 {
-                    <p class="mont_regular_22_darkgray">@ia.ArticleText</p>
-                    <a asp-controller="introArticles" asp-action="Edit" asp-route-id="@ia.ID">Edit</a>
+                        <p class="mont_regular_22_darkgray editArea">@ia.ArticleText</p>
+                        <edit-link>
+                            <edit-a controller="introArticles" route-id="@ia.ID"></edit-a>
+                        </edit-link>
+                    }
                 }
-            }
-        </section>
+            </section>
+        </div>
     </div>
-</div>
-
+</edit-container>
 <div class="container-fluid">
     <div class="row hist_2nd_back_img">
         <section class="col-xs-12 hist_2nd_back_img_text">
@@ -22,20 +25,23 @@
     </div>
 </div>
 
-
-<div class="container-fluid">
-    <div class="row history_text">
-        <section class="col-xs-12">
-            @foreach (introArticle ia in Model.introArticles)
+<edit-container>
+    <div class="container-fluid">
+        <div class="row history_text">
+            <section class="col-xs-12">
+                @foreach (introArticle ia in Model.introArticles)
             {
                 if (ia.ID == 3)
                 {
-                    <p class="mont_regular_22_darkgray">@ia.ArticleText</p>
-                    <a asp-controller="introArticles" asp-action="Edit" asp-route-id="@ia.ID">Edit</a>
+                    <p class="mont_regular_22_darkgray editArea">@ia.ArticleText</p>
+                    <edit-link>
+                <edit-a controller="introArticles" route-id="@ia.ID"></edit-a>
+                    </edit-link>
+                    }
                 }
-            }
-        </section>
+            </section>
+        </div>
     </div>
-</div>
-@* ------ END YF HISTORY ------ *@
+</edit-container>
+    @* ------ END YF HISTORY ------ *@
 
