--- a/MyYouthFutures/Views/Shared/PartialViews/_IntroductionArticle.cshtml
+++ b/MyYouthFutures/Views/Shared/PartialViews/_IntroductionArticle.cshtml
@@ -1,13 +1,15 @@
 ﻿@* ------INTRODUCTION ARTICLE ------ *@
-<div class="container-fluid">
+<div class="container-fluid" >
     <div class="row history_text">
         <section class="col-xs-12">
             @foreach (introArticle ia in Model.introArticles)
             {
                 if (ia.ID == 1)
                 {
-                    <p class="mont_regular_22_darkgray">@ia.ArticleText</p>
-                    <a asp-controller="introArticles" asp-action="Edit" asp-route-id="@ia.ID">Edit</a>
+                    <p class="mont_regular_22_darkgray  editArea">@ia.ArticleText</p>
+                    <edit-link>
+                        <edit-a controller="introArticles" route-id="@ia.ID"></edit-a>
+                    </edit-link>
                 }
             }
         </section>
