Fixed staff edit and alignment

--- a/MyYouthFutures/Views/Shared/PartialViews/_BoardOfDirectors.cshtml
+++ b/MyYouthFutures/Views/Shared/PartialViews/_BoardOfDirectors.cshtml
@@ -1,6 +1,4 @@
-﻿
-
-<div class="container-fluid" id="directorsMain">
+﻿<div class="container-fluid" id="directorsMain">
     <div class="row board_header">
         <div class="col-xs-6 text" id="Board">
             <h2>Board of</h2>
