Added new edit to Donors removed excess calls

--- a/MyYouthFutures/Views/Shared/PartialViews/_HelpPanel.cshtml
+++ b/MyYouthFutures/Views/Shared/PartialViews/_HelpPanel.cshtml
@@ -1,4 +1,11 @@
-﻿<div class="row donate_help">
+﻿
+<div class="container-fluid" id="donateMain">
+    <div class="row donor_header">
+        <div class="col-xs-6 text" id="Donate">
+            <h2 class="h2style1">Donate</h2>
+        </div>
+    </div>
+<div class="row donate_help">
     <div class="col-xs-12">
         @foreach (Help_Panel hp in Model.Help_Panel)
         {
