--- a/MyYouthFutures/Views/Shared/PartialViews/_Donors.cshtml
+++ b/MyYouthFutures/Views/Shared/PartialViews/_Donors.cshtml
@@ -1,4 +1,12 @@
-﻿@* Donors *@
+﻿<div class="container-fluid" id="donorsMain">
+    <div class="row donor_header">
+        <div class="col-xs-6 text" id="Donor">
+            <h2 class="h2style1">Donors</h2>
+        </div>
+        <a class="editText" asp-controller="Doners" asp-action="Create">Add Donor</a>
+    </div>
+
+</div>
 <div class="container-fluid">
     <div class="row donor_subheader">
         <div class="col-xs-12 ">
@@ -6,39 +14,24 @@
         </div>
     </div>
 </div>
-
-<a asp-controller="Doners" asp-action="Create">Add Donor</a>
 <div class="container-fluid">
     <div class="row donor_list">
         @foreach (Doners d in Model.Doners)
             {
                 if (d.Doner_Type.Equals("Plantinum"))
                 {
-                <div class="col-xs-4 donor_box plat">
-                    <p class="donor_name">@d.Doner_Name</p>
-                    <p class="year">@d.Doner_year</p>
-                    <a asp-controller="Doners" asp-action="Edit" asp-route-id="@d.ID">Edit</a>
-                </div>
-
+                <edit-container>
+                    <div class="col-xs-4 donor_box plat">
+                        <div class="editArea">
+                            <p class="donor_name">@d.Doner_Name</p>
+                            <p class="year">@d.Doner_year</p>
+                        </div>
+                        <edit-link>
+                            <edit-a controller="Doners" route-id="@d.ID"></edit-a>
+                        </edit-link>
+                    </div>
+                </edit-container>
             }
-
-        }
-    </div>
-</div>
-<div class="container-fluid">
-    <div class="row donor_list">
-        @foreach (Doners d in Model.Doners)
-            {
-                if (d.Doner_Type.Equals("Plantinum"))
-                {
-                <div class="col-xs-4 donor_box plat">
-                    <p class="donor_name">@d.Doner_Name</p>
-                    <p class="year">@d.Doner_year</p>
-                    <a asp-controller="Doners" asp-action="Edit" asp-route-id="@d.ID">Edit</a>
-                </div>
-
-            }
-
         }
     </div>
 </div>
@@ -55,29 +48,17 @@
             {
                 if (d.Doner_Type.Equals("Gold"))
                 {
-                <div class="col-xs-4 donor_box gold">
-                    <p class="donor_name">@d.Doner_Name</p>
-                    <p class="year">@d.Doner_year</p>
-                    <a asp-controller="Doners" asp-action="Edit" asp-route-id="@d.ID">Edit</a>
-                </div>
-
-            }
-
-        }
-    </div>
-</div>
-<div class="container-fluid">
-    <div class="row donor_list">
-        @foreach (Doners d in Model.Doners)
-            {
-                if (d.Doner_Type.Equals("Gold"))
-                {
-                <div class="col-xs-4 donor_box gold">
-                    <p class="donor_name">@d.Doner_Name</p>
-                    <p class="year">@d.Doner_year</p>
-                    <a asp-controller="Doners" asp-action="Edit" asp-route-id="@d.ID">Edit</a>
-                </div>
-
+                <edit-container>
+                    <div class="col-xs-4 donor_box gold">
+                        <div class="editArea">
+                            <p class="donor_name">@d.Doner_Name</p>
+                            <p class="year">@d.Doner_year</p>
+                        </div>
+                        <edit-link>
+                            <edit-a controller="Doners" route-id="@d.ID"></edit-a>
+                        </edit-link>
+                    </div>
+                </edit-container>
             }
 
         }
@@ -96,32 +77,19 @@
             {
                 if (d.Doner_Type.Equals("Silver"))
                 {
-                <div class="col-xs-4 donor_box silver">
-                    <p class="donor_name">@d.Doner_Name</p>
-                    <p class="year">@d.Doner_year</p>
-                    <a asp-controller="Doners" asp-action="Edit" asp-route-id="@d.ID">Edit</a>
-                </div>
-
-            }
-
-        }
-    </div>
-    <div class="container-fluid">
-        <div class="row donor_list">
-            @foreach (Doners d in Model.Doners)
-            {
-                if (d.Doner_Type.Equals("Silver"))
-                {
+                <edit-container>
                     <div class="col-xs-4 donor_box silver">
-                        <p class="donor_name">@d.Doner_Name</p>
-                        <p class="year">@d.Doner_year</p>
-                        <a asp-controller="Doners" asp-action="Edit" asp-route-id="@d.ID">Edit</a>
+                        <div class="editArea">
+                            <p class="donor_name">@d.Doner_Name</p>
+                            <p class="year">@d.Doner_year</p>
+                        </div>
+                        <edit-link>
+                            <edit-a controller="Doners" route-id="@d.ID"></edit-a>
+                        </edit-link>
                     </div>
-
-                }
-
+                </edit-container>
             }
-        </div>
+        }
     </div>
     <div class="container-fluid">
         <div class="row donor_subheader">
@@ -136,35 +104,19 @@
             {
                 if (d.Doner_Type.Equals("Bronze"))
                 {
-                    <div class="col-xs-4 donor_box bronze">
-                        <p class="donor_name">@d.Doner_Name</p>
-                        <p class="year">@d.Doner_year</p>
-                        <a asp-controller="Doners" asp-action="Edit" asp-route-id="@d.ID">Edit</a>
-                    </div>
-
+                    <edit-container>
+                        <div class="col-xs-4 donor_box bronze">
+                            <div class="editArea">
+                                <p class="donor_name">@d.Doner_Name</p>
+                                <p class="year">@d.Doner_year</p>
+                            </div>
+                            <edit-link>
+                                <edit-a controller="Doners" route-id="@d.ID"></edit-a>
+                            </edit-link>
+                        </div>
+                    </edit-container>
                 }
-
             }
         </div>
     </div>
-    <div class="container-fluid">
-        @foreach (Doners d in Model.Doners)
-            {
-                if (d.Doner_Type.Equals("Bronze"))
-                {
-                <div class="col-xs-4 donor_box bronze">
-                    <p class="donor_name">@d.Doner_Name</p>
-                    <p class="year">@d.Doner_year</p>
-                    <a asp-controller="Doners" asp-action="Edit" asp-route-id="@d.ID">Edit</a>
-                </div>
-
-            }
-
-        }
-    </div>
-    <div class="container-fluid" id="donateMain">
-        <div class="row donor_header">
-            <div class="col-xs-6 text" id="Donate">
-                <h2 class="h2style1">Donate</h2>
-            </div>
-        </div>
+</div>
