Lists of needs added edit

--- a/MyYouthFutures/Views/Shared/PartialViews/_ListOfNeeds.cshtml
+++ b/MyYouthFutures/Views/Shared/PartialViews/_ListOfNeeds.cshtml
@@ -1,5 +1,4 @@
-﻿
-<div class="container-fluid needs">
+﻿<div class="container-fluid needs">
     <div class="row donate_help">
         <div class="col-xs-12">
             <p>LIST OF NEEDS</p>
@@ -12,81 +11,109 @@
                 (In order of priority)
             </p>
             <ul>
-                @foreach (List_Item outlINeeds in Model.List_item)
-                {
-                    if (outlINeeds.TypeOfList.Equals("mostImportantNeeds"))
-                    {
-                        <li>@outlINeeds.LiText</li>
-                                <a asp-controller="List_Item" asp-action="Edit" asp-route-id="@outlINeeds.ID">Edit</a>
-                    }
-
-                }
+                <edit-container>
+                    <div class=" editArea">
+                        @foreach (List_Item outlINeeds in Model.List_item)
+                        {
+                            if (outlINeeds.TypeOfList.Equals("mostImportantNeeds"))
+                            {
+                                <li>@outlINeeds.LiText</li>
+                            }
+                        }
+                    </div>
+                    <edit-link>
+                        <a class="editText" asp-controller="List_Item" asp-action="Index">Edit</a>
+                    </edit-link>
+                </edit-container>
             </ul>
         </div>
         <div class="col-xs-12 col-md-4 needs_list">
             <p class="needs_subheader">MISC. NEEDS</p>
             <ul>
-                @foreach (List_Item outLiMNeeds in Model.List_item)
-                {
-                    if (outLiMNeeds.TypeOfList.Equals("MISCNEEDS"))
-                    {
-                        <li>@outLiMNeeds.LiText</li>
-                                <a asp-controller="List_Item" asp-action="Edit" asp-route-id="@outLiMNeeds.ID">Edit</a>
-                    }
-
-                }
+                <edit-container>
+                    <div class="editArea">
+                        @foreach (List_Item outLiMNeeds in Model.List_item)
+                        {
+                            if (outLiMNeeds.TypeOfList.Equals("MISCNEEDS"))
+                            {
+                                <li>@outLiMNeeds.LiText</li>
+                            }
+                        }
+                    </div>
+                    <edit-link>
+                        <a class="editText" asp-controller="List_Item" asp-action="Index">Edit</a>
+                    </edit-link>
+                </edit-container>
             </ul>
             <p class="needs_subheader">GIFT CARDS FOR</p>
             <ul>
-                @foreach (List_Item outLiGCards in Model.List_item)
-                {
-                    if (outLiGCards.TypeOfList.Equals("GiftCardsForNeeds"))
-                    {
-                        <li>@outLiGCards.LiText</li>
-                                <a asp-controller="List_Item" asp-action="Edit" asp-route-id="@outLiGCards.ID">Edit</a>
-                    }
-
-                }
+                <edit-container>
+                    <div class="editArea">
+                        @foreach (List_Item outLiGCards in Model.List_item)
+                        {
+                            if (outLiGCards.TypeOfList.Equals("GiftCardsForNeeds"))
+                            {
+                                <li>@outLiGCards.LiText</li>
+                            }
+                        }
+                    </div>
+                    <edit-link>
+                        <a class="editText" asp-controller="List_Item" asp-action="Index">Edit</a>
+                    </edit-link>
+                </edit-container>
             </ul>
         </div>
         <div class="col-xs-12 col-md-4 needs_list">
             <p class="needs_subheader">HOUSEHOLD FURNISHINGS NEEDS</p>
             <ul>
-                @foreach (List_Item outLiHouse in Model.List_item)
-                {
-                    if (outLiHouse.TypeOfList.Equals("HouseholdFurnishingsNeeds"))
-                    {
-                        <li>@outLiHouse.LiText</li>
-                                <a asp-controller="List_Item" asp-action="Edit" asp-route-id="@outLiHouse.ID">Edit</a>
-
-                    }
-
-                }
+                <edit-container>
+                    <div class="editArea">
+                        @foreach (List_Item outLiHouse in Model.List_item)
+                        {
+                            if (outLiHouse.TypeOfList.Equals("HouseholdFurnishingsNeeds"))
+                            {
+                                <li>@outLiHouse.LiText</li>
+                            }
+                        }
+                    </div>
+                    <edit-link>
+                        <a class="editText" asp-controller="List_Item" asp-action="Index">Edit</a>
+                    </edit-link>
+                </edit-container>
             </ul>
             <p class="needs_subheader">VOLUNTEERS</p>
             <ul>
-                @foreach (List_Item outLiVol in Model.List_item)
-                {
-                    if (outLiVol.TypeOfList.Equals("Volunteers"))
-                    {
-                        <li>@outLiVol.LiText</li>
-                                <a asp-controller="List_Item" asp-action="Edit" asp-route-id="@outLiVol.ID">Edit</a>
-                    }
-
-                }
+                <edit-container>
+                    <div class="editArea">
+                        @foreach (List_Item outLiVol in Model.List_item)
+                        {
+                            if (outLiVol.TypeOfList.Equals("Volunteers"))
+                            {
+                                <li>@outLiVol.LiText</li>
+                            }
+                        }
+                    </div>
+                    <edit-link>
+                        <a class="editText" asp-controller="List_Item" asp-action="Index">Edit</a>
+                    </edit-link>
+                </edit-container>
             </ul>
             <p class="needs_subheader">REPAIR NEEDS</p>
             <ul>
-                @foreach (List_Item outLiRep in Model.List_item)
-                {
-                    if (outLiRep.TypeOfList.Equals("RepairNeeds"))
-                    {
-                        <li>@outLiRep.LiText</li>
-                                <a asp-controller="List_Item" asp-action="Edit" asp-route-id="@outLiRep.ID">Edit</a>
-
-                    }
-
-                }
+                <edit-container>
+                    <div class="editArea">
+                        @foreach (List_Item outLiRep in Model.List_item)
+                        {
+                            if (outLiRep.TypeOfList.Equals("RepairNeeds"))
+                            {
+                                <li>@outLiRep.LiText</li>
+                            }
+                        }
+                    </div>
+                    <edit-link>
+                        <a class="editText" asp-controller="List_Item" asp-action="Index">Edit</a>
+                    </edit-link>
+                </edit-container>
             </ul>
         </div>
     </div>
