Adding in files for Identity Authentication

--- a/MyYouthFutures/Views/Shared/PartialViews/_Services.cshtml
+++ b/MyYouthFutures/Views/Shared/PartialViews/_Services.cshtml
@@ -2,7 +2,7 @@
 <section class="container-fluid services">
     <div class="row">
         <div class="col-xs-12">
-            @foreach (Services SV in Model.Services)
+            @foreach (Services_Title SV in Model.Services)
             {
                 <edit-container>
                     <div class="editArea">
