adjusted margin for login

--- a/MyYouthFutures/Views/Account/Login.cshtml
+++ b/MyYouthFutures/Views/Account/Login.cshtml
@@ -10,23 +10,23 @@
 
             <div class="row">
                 <!--User Name-->
-                <label class="col-xs-push-1 col-xs-10" asp-for="UserName"><b>Username:</b></label>
+                <label class="col-xs-push-1 col-xs-10" asp-for="UserName"><b>Username</b></label>
                 <input class="col-xs-push-1 col-xs-10" type="text" name="usrnm" required asp-for="UserName"/>
                 
 
                 <!--Password-->
-                <label class="col-xs-push-1 col-xs-10" asp-for="Password"><b>Password:</b></label>
-                <input class="col-xs-push-1 col-xs-10" type="password" name="pswrd" required asp-for="Password"/>
+                <label class="col-xs-push-1 col-xs-10" asp-for="Password"><b>Password</b></label>
+                <input class="col-xs-push-1 col-xs-10" style="margin-bottom: 20px" type="password" name="pswrd" required asp-for="Password"/>
                 
 
                 <!--Login Button-->
                 <button id="sbmt" type="submit" class="btn-lg btn-success col-xs-push-1 col-xs-10">Login</button>
 
                 <!--Links for forgotten password/username-->
-                <p><a class="col-xs-push-2 col-xs-8">Forgot Your Password?</a>
+                @*<p><a class="col-xs-push-2 col-xs-8">Forgot Your Password?</a>
                 </p>
                 <p><a class="col-xs-push-2 col-xs-8">Forgot Your Username?</a>
-                </p>
+                </p>*@
             </div>
         </form>
     </div>
